# symbolic-expressions

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
examples/: ex1.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/std/error/: trait.Error.js
src/: build.rs  data.rs  data.rs.in  decode.rs  encode.rs  error.rs  formatter.rs  iteratom.rs  lib.rs  main.rs  parser.rs  parser2.rs  ser.rs  sexp.rs  test.rs
src/symbolic_expressions/src/: error.rs.html  formatter.rs.html  lib.rs.html  parser.rs.html  ser.rs.html  sexp.rs.html
symbolic_expressions/: enum.Error.html  enum.Sexp.html  fn.encode_string.html  fn.parse_error.html  fn.str_error.html  index.html  struct.ParseError.html  trait.Formatter.html  trait.IntoSexp.html  type.Result.html  type.Rules.html
symbolic_expressions/parser/: fn.parse_file.html  fn.parse_str.html  index.html
symbolic_expressions/ser/: fn.to_string.html  fn.to_string_with_formatter.html  fn.to_string_with_rules.html  fn.to_vec.html  fn.to_vec_with_formatter.html  fn.to_vec_with_rules.html  fn.to_writer.html  fn.to_writer_with_formatter.html  fn.to_writer_with_rules.html  index.html
tests/: iteratom.rs
